endpoint created for other user products

--- a/app/app/static/css/footer.css
+++ b/app/app/static/css/footer.css
@@ -97,7 +97,7 @@
     color: #72829b;
     margin-top: 15px;
     float: left;
-    width: 524px;
+    width: 100%;
 }
   
 .footer-bottom .links-sites img{
