--- a/app/app/static/css/header_search.css
+++ b/app/app/static/css/header_search.css
@@ -43,6 +43,10 @@
    
 }
 
+.section-title_more{
+    float: right;
+}
+
 /* Bootstrap 4 text select with search icon */
 .has-select{
     display: inline-flex;
