--- a/app/templates/pages/result_page.html
+++ b/app/templates/pages/result_page.html
@@ -34,6 +34,13 @@
                             <a class="section-title_more" href="#">Hamısını göstər</a>
                         </div>
                         <div class="products">
+                            <div class="row">
+                                <div class="col-md-12 products-row">
+                                    <!-- All producs here-->
+                                    
+                                    <!--pruducts-->
+                                </div>                                    
+                            </div>
                         </div>
                     </div>
                     <!--products-->
