--- a/app/templates/pages/product_detail.html
+++ b/app/templates/pages/product_detail.html
@@ -117,9 +117,9 @@
             <li>{{ product.user.name }}</li>
             
             <li>
-              <a style="font-size: 13px;" href="">İstifadəçinin bütün elanları</a></li>
+              <a style="font-size: 13px;" href="{% url 'search-result-page' %}?user_id={{ request.user.id }}">İstifadəçinin bütün elanları</a></li>
               {% if request.user == product.user %}
-                <a href=""><li style="font-size: 13px;">Düzəliş Et</li></a>
+                <a href="{{ request.path}}ad_edits/"><li style="font-size: 13px;">Düzəliş Et</li></a>
                 <a href=""><li style="font-size: 13px;">Elanı Sil</li></a>
               {% endif %}
           </ul>
