--- a/app/templates/includes/header_main.html
+++ b/app/templates/includes/header_main.html
@@ -1,4 +1,6 @@
 {% load static%}
+{% load i18n %}
+
 <!-- Header main-->
         <div class="header-main">
             <div class="container">
@@ -15,13 +17,13 @@
                                     <div class="dropdown">
                                         <div class="dropbtn"><i class="fa fa-fw fa-user "></i>{{request.user.email}}</div>
                                         <div class="dropdown-content">
-                                            <a href="{% url 'user-profile'%}">Mənim elanlarım</a>
-                                            <a href="{% url 'profile-settings'%}">Profil</a>
-                                            <a href="{% url 'users:logout'%}">Çıxış</a>
+                                            <a href="{% url 'user-profile'%}">{% translate 'Mənim elanlarım'%}</a>
+                                            <a href="{% url 'profile-settings'%}">{% translate 'Profil'%}</a>
+                                            <a href="{% url 'users:logout'%}">{% translate 'Çıxış'%}</a>
                                         </div>
                                     </div>
                                 {% else %}
-                                    <a class="login-link" href="{% url 'users:login' %}"> <i class="fa fa-fw fa-user "></i>Giriş</a>
+                                    <a class="login-link" href="{% url 'users:login' %}"> <i class="fa fa-fw fa-user "></i>{% translate 'Giriş'%}</a>
                                 {% endif %}
                                 <a type="button" href="{% url 'new-product-add-page' %}" class="header-btn"><i class="fa fa-fw fa-plus"></i>Elan yerləşdir</a>
                             </div> 
