--- a/app/templates/includes/new_product_form.html
+++ b/app/templates/includes/new_product_form.html
@@ -1,4 +1,4 @@
-<form class="simple_form lot-form js-lot-form no-banners lot-form--unauthorized product-form" accept-charset="UTF-8" id="createProduct" method="post">
+<form class="simple_form lot-form js-lot-form no-banners lot-form--unauthorized product-form" accept-charset="UTF-8" id="createProduct" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {% block category %}
     <div class='row'>
@@ -96,7 +96,9 @@
         </div>
         <div class='col-md-7'>
             <input class="form-control form-control-sm" type="file" name="image" accept="image/*" />
+            
         </div>
+        
     </div> 
     {% block contact %}
     <fieldset class='contact'>
