ajax-form and main.js updated

--- a/app/templates/includes/new_product_form.html
+++ b/app/templates/includes/new_product_form.html
@@ -90,16 +90,15 @@
               </div>
         </div>
     </div> 
-    <div class='row'>
-        <div class='col-md-5'>
-            <span>Şəkillər </span>
-        </div>
-        <div class='col-md-7'>
-            <input class="form-control form-control-sm" type="file" name="image" accept="image/*" />
-            
-        </div>
-        
-    </div> 
+        <div class='row'>
+            <div class='col-md-5'>
+                <span>Şəkillər </span>
+            </div>
+            <div class='col-md-7'>
+                <input class="form-control form-control-sm" id="ImageBrowse" type="file" name="image" accept="image/*" />
+            </div>
+        </div> 
+    
     {% block contact %}
     <fieldset class='contact'>
         <div class='row'>
