mobile view responsibility update

--- a/app/templates/includes/footer.html
+++ b/app/templates/includes/footer.html
@@ -26,48 +26,15 @@
                                             <!--Grid column-->
                                             <div class="col-lg-2 col-md-2 mb-4 mb-md-0">
                                                 <ul class="list-unstyled mb-0 ">
+                                                {%for city in cities%}
                                                     <li>
-                                                        <a href="#">Bakı</a>
+                                                        <a href="#">{{city.name}}</a>
                                                     </li>
-                                                    <li>
-                                                        <a href="#">Sumqayıt</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">Ağcabədi</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">Ağdam</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">Ağdaş</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">Ağdərə</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">Ağstafa</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">Ağsu</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">Astara</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">Balakən</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">Beyləqan</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">Bərdə</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">Biləsuvar</a>
-                                                    </li>
+
+                                                {%endfor%}
                                                 </ul>
                                             </div>
-                                            <!--Grid column-->
+                                            <!--Grid column--><!-- 
                                             <div class="col-lg-2 col-md-2 mb-4 mb-md-0">
                                                 <ul class="list-unstyled mb-0" >
                                                     <li>
@@ -198,7 +165,6 @@
                                                 </ul>
                                             </div>
                                     
-                                            <!--Grid column-->
                                             <div class="col-lg-2 col-md-2 mb-4 mb-md-0">
                                                 <ul class="list-unstyled mb-0">
                                                     <li>
@@ -242,7 +208,6 @@
                                                     </li>
                                                 </ul>
                                             </div>
-                                            <!--Grid column-->
                                             <div class="col-lg-2 col-md-2 mb-4 mb-md-0">
                                 
                                                 <ul class="list-unstyled mb-0">
@@ -280,7 +245,7 @@
                                                         <a href="#">Zərdab</a>
                                                     </li>
                                                 </ul>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
