endpoint for product list updated and filter by category added

--- a/app/templates/includes/header_search.html
+++ b/app/templates/includes/header_search.html
@@ -24,7 +24,7 @@
                     <div class='row'>
                         {% for category in categories %}
                         <div class='col-3'>
-                            <a href='#'>
+                            <a href='{{ request.path }}?category={{ category.name }}'>
                                 <div class='row category-row row-{{forloop.counter}} {% if forloop.counter <= 4 %} category-first-row {% elif forloop.counter >= 9 %} category-last-row {% endif %}'>
                                     <div class='col-2'>
                                         <div class='header-category-icon'>
@@ -39,7 +39,7 @@
                         </div>   
                         {% endfor %}   
                 </div>
-                <div class="row sub-categories-row">
+                <!-- <div class="row sub-categories-row">
                     <div class="col-12 all-ads">
                         <a href="#"><span> Bütün elanlar </span> <span class="total-amount"> 2986 </span></a>
                     </div>
@@ -51,7 +51,7 @@
                         <div class="col-md-4"><a href="#"><i class="fas fa-chevron-right"></i><span> Tikinti </span> <span class="total-amount"> 2986 </span> </a></div>
                         <div class="col-md-4"><a href="#"><i class="fas fa-chevron-right"></i><span> Tikinti </span> <span class="total-amount"> 2986 </span> </a></div>
                     </div>
-                </div> 
+                </div>  -->
             </div>
         </div>
     </div>
