--- a/app/templates/includes/search_form.html
+++ b/app/templates/includes/search_form.html
@@ -1,17 +1,17 @@
-<form action="{% url 'search-result-page' %}" method="GET" class="form-inline pt-4">
+<form id="searchProductForm" class="form-inline pt-4">
     <div class="col-md-12">
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group has-search">
                     <span class="fa fa-search form-control-feedback"></span>
-                    <input type="text" name='keyword' class="form-control"
+                    <input type="text" id="keywordInput" class="form-control"
                         placeholder="Məsələn, iPhone X">
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group has-select">
                     <span class="fa fa-map-marker fa-lg form-control-feedback"></span>
-                    <select style="height: 38px;" class="form-control">
+                    <select style="height: 38px;" class="form-control" id="citySelect">
                         <option style="line-height: 1rem;" value="0">Bütün Azərbaycan
                             <i class="fas fa-chevron-down"></i> </option>
                         {% for city in cities %}
