--- a/app/app/static/css/header_search.css
+++ b/app/app/static/css/header_search.css
@@ -2,7 +2,7 @@
     margin: 0%;
     padding: 0%;
     background: #ffd8a2;
-
+    padding-bottom: 1.2rem;
 }
 .header-nav{
     padding: 0 5% 0 5%;
