--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -6,13 +6,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li>
-                            <a class="nav-link active" href="/"><i class ="fa fa-fw fa-home"></i>{% translate 'Əsas səhifə' %}</a>
+                            <a class="nav-link active" href="/"><i class ="fa fa-fw fa-home" style="margin-right: 0.4rem;"></i>{% translate 'Əsas səhifə' %}</a>
                         </li>
                         <li class="nav-item">
                         </li> 
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">{% translate 'Language: EN' %}</a>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="#">{% translate 'Saytda reklam'%}</a>
                         </li>
