--- a/app/templates/pages/profile_settings.html
+++ b/app/templates/pages/profile_settings.html
@@ -26,50 +26,32 @@
     <div class="wrapper bg-white mt-sm-5">
         <h4 class="pb-4 border-bottom">Hesab Parametrləri</h4>
         <div class="py-2">
+            <form method='POST'>
+                {% csrf_token %}
             <div class="row py-2">
-                <form method='POST'>
-                    {% csrf_token %}
-                    <div class="col-md-6"> <label for="firstname">{% translate 'Ad'%}</label>
-                        <input type="text" name="name" class="bg-light form-control" placeholder="{{user.name}}">
+                    <div class="col-md-6"> <label for="firstname">{% translate 'Ad' %}</label>
+                        <input type="text" name="name" class="bg-light form-control" value="{{user.name}}">
                     </div>
-                    <div class="col-md-6 pt-md-0 pt-3"> <label for="lastname">{% translate 'Soyad'%}</label>
-                        <input type="text" name="surname" class="bg-light form-control" placeholder="{{user.surname}}">
+                    <div class="col-md-6"> <label for="lastname">{% translate 'Soyad' %}</label>
+                        <input type="text" name="surname" class="bg-light form-control" value="{{user.surname}}">
                     </div>
             </div>
             <div class="row py-2">
-                <div class="col-md-6"> <label for="email">Email Address</label>
-                    <input type="text" name="email" class="bg-light form-control" placeholder="{{user.email}}">
-                </div>
-                <div class="col-md-6 pt-md-0 pt-3"> <label for="phone">Əlaqə nömrəsi</label>
-                    <input type="tel" name="phone_number" class="bg-light form-control"
-                        placeholder="+994 {{user.phone}}">
-                </div>
                 <div class="row py-2">
                     <div class="col-md-6"> <label for="email">{% translate 'Email Address'%}</label>
                         <input type="text" name="email" class="bg-light form-control" placeholder="{{user.email}}">
                     </div>
                     <div class="col-md-6 pt-md-0 pt-3"> <label for="phone">{% translate 'Əlaqə nömrəsi'%}</label>
                         <input type="tel" name="phone_number" class="bg-light form-control"
-                            placeholder="+994{{user.phone}}">
+                            value="{{user.phone}}">
                     </div>
                 </div>
                 <div class="row py-2">
-                    <div class="col-md-6"> <label for="oldpassword">{% translate 'Cari şifrə'%}</label>
-                        <input type="password" name="oldpassword" class="bg-light form-control"
-                            placeholder="Cari şifrə">
-                    </div>
                     <div class="col-md-6"> <label for="password">{% translate 'Yeni şifrə'%}</label>
                         <input type="password" name="password" class="bg-light form-control"
                             placeholder="Yeni şifrə daxil edin">
                     </div>
                 </div>
-                <!--  <div class="row py-2">
-                
-                <div class="col-md-6 pt-md-0 pt-3"> <label for="newpassword1">Yeni şifrə(təkrar)</label>
-                    <input type="password" name="newpassword2" class="bg-light form-control"
-                        placeholder="Yeni şifrə daxil edin">
-                </div>
-            </div> -->
                 <div class="py-3 pb-4 border-bottom"> <button type="submit" class="btn btn-primary mr-3">{% translate 'Yadda Saxla' %}</button> <button class="btn border button">{% translate 'Ləğv Et'%}</button> </div>
             </form>
         </div>
