delete product logic created

--- a/app/templates/pages/product_detail.html
+++ b/app/templates/pages/product_detail.html
@@ -120,7 +120,7 @@
               <a style="font-size: 13px;" href="{% url 'search-result-page' %}?user_id={{ product.user.id }}">İstifadəçinin bütün elanları</a></li>
               {% if request.user == product.user %}
                 <a href="{{ request.path}}ad_edits/"><li style="font-size: 13px;">Düzəliş Et</li></a>
-                <a href=""><li style="font-size: 13px;">Elanı Sil</li></a>
+                <a href="{% url 'delete-product' product.slug %}"><li style="font-size: 13px;">Elanı Sil</li></a>
               {% endif %}
           </ul>
 
@@ -203,8 +203,6 @@
             </a>
           </div>
           {%endfor%}
-
-
 
         </div>
       </div>
